--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
-        "laracasts/generators": "^1.1"
+        "laracasts/generators": "^1.1",
+		"maatwebsite/excel": "~2.0"
     },
     "autoload": {
         "classmap": [
